--- a/src/pages/cadastrar/styles.module.scss
+++ b/src/pages/cadastrar/styles.module.scss
@@ -1,9 +1,9 @@
 .form {
   border-radius: 0px 15px 15px 15px;
 
-  max-width: 1000px;
+  max-width: 900px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1rem 0rem 0.5rem 1rem;
   background: var(--background-color-light);
 
   hr {
@@ -11,21 +11,20 @@
     background: var(--black);
   }
 
-  input, select {
-    width: 80vw;
+  input,
+  select {
+    width: 90vw;
     max-width: 28rem;
     padding: 0.4rem;
     border-width: 1px;
     border-radius: 0.5rem;
   }
 
-  .dadosCliente {
-    display: flexbox;
-  }
-
-  .botoes {
-    margin: 1rem 0.5rem;
+  .buttons {
+    padding: 0.5rem;
+    margin: 1rem 1rem 2rem 0;
     display: flex;
+    align-items: center;
     justify-content: center;
     gap: 5rem;
     button {
@@ -39,9 +38,11 @@
       border-radius: 0.5rem;
     }
   }
-  @media (min-width: 699px) {
-    input,select {
+  @media (min-width: 800px) {
+    input,
+    select {
       padding: 0.6rem;
+      border-radius: 1rem;
     }
     .inputCurto {
       width: 12rem;
@@ -49,38 +50,58 @@
     .inputMtCurto {
       width: 3rem;
     }
-    .dadosCliente {
-      margin-bottom: 1rem;
-      display: flex;
-      gap: 5rem;
-
-      div{
-        div{
-          display: flex;
-          gap: 1rem;          
-        }
-      }
+    .tamanhoMedio {
+      width: 9rem;
     }
-    .enderecoCliente {
-      margin-top: 1rem;
+    .dadosCliente, .enderecoCliente {
+      margin: 1rem 0 1rem 0;     
       display: flex;
-      gap: 5rem;
-      div{
+      div {
         div {
           display: flex;
           gap: 1rem;
         }
       }
     }
+     
     .buttons {
-      margin-top: 15rem;
-      margin-left: 15rem;
+      margin: 5rem 0 0 5rem;
       button {
+        background: var(--background-not-used);
         width: 8rem;
         padding: 0.5rem 1rem;
         border-width: 1px;
         border-radius: 1rem;
+
+        transition: 0.2s;
+        &:hover {
+          filter: brightness(0.9);
+        }
       }
+    }
+  }
+  @media (min-width: 900px) {
+    input{
+      width: 26rem;
+    }
+    .dadosCliente, .enderecoCliente {
+      display: flex;
+      gap: 5rem;
+    }
+    .inputCurto {
+      width: 12rem;
+    }
+    .inputMtCurto {
+      width: 3rem;
+    }
+    .tamanhoMedio {
+      width: 9rem;
+    }
+    .complemento {
+      width: 25rem;
+    }
+    .buttons {
+      margin: 8rem 0 0 8rem;
     }
   }
 }
