--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,7 +20,8 @@
 
 html { 
   // Adaptando a interface de acordo com a tela do usuário
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   
   @media (min-width: 1080px) {
     font-size: 93.75%; // 15px
@@ -33,6 +34,7 @@ html {
 
 div#root {
   height:100vh;
+  width: 100vw;
 }
 body {
   background: var(--background-color);
