Criando o Crud do Fornecedor e Fabricantes

--- a/src/pages/cadastrar/clientes/styles.module.scss
+++ b/src/pages/cadastrar/clientes/styles.module.scss
@@ -3,12 +3,13 @@
 
   max-width: 900px;
   margin: 0 auto;
-  padding: 1rem 0rem 0.5rem 1rem;
+  padding: 1rem 1rem 0.2rem 1rem;
   background: var(--background-color-light);
 
   hr {
     height: 2px;
     background: var(--black);
+    margin: 0 auto;
   }
 
   input,
