--- a/src/pages/relatorios/clientes/cliente/styles.module.scss
+++ b/src/pages/relatorios/clientes/cliente/styles.module.scss
@@ -28,6 +28,7 @@
     justify-content: center;
     gap: 5rem;
     button {
+      background: var(--background-not-used);
       width: 35vw;
       max-width: 9rem;
       padding: 0;
@@ -36,6 +37,9 @@
       border-width: 1px;
 
       border-radius: 0.5rem;
+      a{
+        text-decoration: none;
+      }
     }
   }
   @media (min-width: 800px) {
@@ -68,9 +72,8 @@
     }
      
     .buttons {
-      margin: 3rem 0 0 0 ;
+      margin: 3rem 0 0 3rem ;
       button {
-        background: var(--background-not-used);
         width: 8rem;
         padding: 0.5rem 1rem;
         border-width: 1px;
