--- a/src/pages/relatorios/clientes/styles.module.scss
+++ b/src/pages/relatorios/clientes/styles.module.scss
@@ -35,8 +35,8 @@
     }
   }
   @media (min-width: 700px) {
-    margin: 5rem auto;
-    border-radius: 15px;
+    margin: 0 auto;
+    border-radius: 0 15px 15px 15px;
     h3 {
       margin: 10px;
     }
