--- a/src/pages/cadastrar/clientes/styles.module.scss
+++ b/src/pages/cadastrar/clientes/styles.module.scss
@@ -40,6 +40,9 @@
     }
   }
   @media (min-width: 800px) {
+    .br{
+      display: none;
+    }
     input,
     select {
       padding: 0.6rem;
