--- a/src/pages/relatorios/clientes/styles.module.scss
+++ b/src/pages/relatorios/clientes/styles.module.scss
@@ -1,4 +1,23 @@
 .div {
+  .repo {    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0.5rem;  
+    border-width: 1px;
+    border-style: solid;
+    strong {
+      margin: 0.3rem;
+    }
+    a {
+      text-decoration: none;
+      background: var(--background-not-used);
+      border-style: solid;
+      border-width: 1px;
+      padding: 2px;   
+      margin: 1px; 
+    }
+  }
   background: var(--background-color-light);
   padding: 0.3rem;
   border-radius: 5px;
