--- a/src/pages/relatorios/clientes/styles.module.scss
+++ b/src/pages/relatorios/clientes/styles.module.scss
@@ -1,29 +1,10 @@
-.div {
-  .repo {    
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0.5rem;  
-    border-width: 1px;
-    border-style: solid;
-    strong {
-      margin: 0.3rem;
-    }
-    a {
-      text-decoration: none;
-      background: var(--background-not-used);
-      border-style: solid;
-      border-width: 1px;
-      padding: 2px;   
-      margin: 1px; 
-    }
-  }
+.div {  
   background: var(--background-color-light);
   padding: 0.3rem;
   border-radius: 5px;
   max-width: 900px;
   .lista {
-    height: 50vh;
+    height: 64vh;
     scroll-behavior: smooth;
     overflow-y: scroll;
   }
@@ -51,6 +32,26 @@
           background: var(--background-not-used);
         }
       }
+    }
+  }
+  .repo {    
+    display: grid;
+    grid-template-columns: 1fr 1fr 0.3fr 0.5fr; 
+    border-width: 1px;
+    border-style: solid;
+    padding: 1px;
+    margin: 1px;
+    strong {      
+      font-size: 0.8rem;
+    }
+    a {
+      font-size: 0.8rem;
+      text-decoration: none;
+      background: var(--background-not-used);
+      border-style: solid;
+      border-width: 1px;
+      padding: 2px;   
+      margin: 1px; 
     }
   }
   @media (min-width: 700px) {
@@ -95,5 +96,25 @@
         }
       }
     }
+    .repo {
+      padding: 3px;
+      strong{
+        margin: 4px;
+        font-size: 1rem;
+      }
+      a {
+        display: flex;
+        font-size: 1rem;
+        align-items: center;
+        justify-content: center;
+      }
+    }
   }
+}
+
+.on {
+  color: green;
+}
+.off {
+  color: red;
 }
