--- a/src/pages/relatorios/clientes/cliente/styles.module.scss
+++ b/src/pages/relatorios/clientes/cliente/styles.module.scss
@@ -1,6 +1,5 @@
 .form {
   border-radius: 15px;
-
   max-width: 900px;
   margin: 0 auto;
   padding: 1rem 0rem 0.5rem 1rem;
@@ -42,8 +41,10 @@
       }
     }
   }
+  .hiddenbr {
+    display: none;
+  }
   @media (min-width: 800px) {
-    
     margin: 6rem auto;
     
     input,
@@ -64,6 +65,9 @@
       margin: 1rem 0 1rem 0;     
       display: flex;
       div {
+        .cpf{
+          display: block;
+        }
         div {
           display: flex;
           gap: 1rem;
@@ -72,7 +76,7 @@
     }
      
     .buttons {
-      margin: 3rem 0 0 3rem ;
+      margin: 2rem 0 0 5rem ;
       button {
         width: 8rem;
         padding: 0.5rem 1rem;
@@ -85,7 +89,7 @@
         }
       }
     }
-   
+    
   }
   @media (min-width: 900px) {
     input{
@@ -108,8 +112,11 @@
       width: 25rem;
     }
     .buttons {
-      margin: 7rem 0 0 3rem;
+      margin: 2rem 0 0 10rem;
     }
   }
 }
 
+.hidden {
+  display: none;
+}
