--- a/src/pages/consultar/fabricantes/slug.module.scss
+++ b/src/pages/consultar/fabricantes/slug.module.scss
@@ -7,6 +7,17 @@
     margin: 5rem auto;
     border-radius: 15px;
   }
+  button {
+    margin: 1rem 0;
+    padding: 5px;
+    width: fit-content;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 13px;
+    background-color: var(--background-not-used);
+    font-weight: 200;
+    margin-right: 1rem;    
+  }
 }
 .form {
   display: flex;
@@ -15,7 +26,7 @@
   label {
     margin: 1rem 0;
   }
-  input{
+  input {
     padding: 5px;
     max-width: 30rem;
     border-radius: 13px;
@@ -24,22 +35,7 @@
     padding: 5px;
     max-width: 5rem;
     border-radius: 13px;
-  }
-}
-.button {
-  margin: 1rem 0;
-  padding: 5px;
-  width: fit-content;
-  border-width: 1px;
-  border-color: black;
-  border-radius: 13px;
-  background-color: var(--background-not-used);
-  font-weight: 200;
-  margin-right: 1rem;
-  a {
-    text-decoration: none;
-    font-weight: 200;
-  }
+  }  
 }
 .hidden {
   display: none;
