--- a/src/pages/consultar/produtos/slug.module.scss
+++ b/src/pages/consultar/produtos/slug.module.scss
@@ -6,6 +6,17 @@
   @media (min-width: 800px) {
     border-radius: 15px;
   }
+  button {
+    margin: 1rem 0;
+    padding: 5px;
+    width: fit-content;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 13px;
+    background-color: var(--background-not-used);
+    font-weight: 200;
+    margin-right: 1rem;    
+  }
 }
 .form {
   display: flex;
@@ -25,19 +36,6 @@
     padding: 5px;
     max-width: 30rem;
     border-radius: 10px;
-  }
-}
-.button {
-  margin: 1rem 0;
-  padding: 5px;
-  width: fit-content;
-  border-width: 1px;
-  border-color: black;
-  border-radius: 10px;
-  background-color: var(--background-not-used);
-  a {
-    text-decoration: none;
-    font-weight: 100;
   }
 }
 .formgroup {
