--- a/src/pages/consultar/clientes/styles.module.scss
+++ b/src/pages/consultar/clientes/styles.module.scss
@@ -36,7 +36,8 @@
   }
   .repo {    
     display: grid;
-    grid-template-columns: 1fr 1fr 0.3fr 0.5fr; 
+    grid-template-columns: 1fr 1fr .3fr .3fr; 
+    justify-content: center;
     border-width: 1px;
     border-style: solid;
     padding: 1px;
@@ -44,14 +45,8 @@
     strong {      
       font-size: 0.8rem;
     }
-    a {
-      font-size: 0.8rem;
-      text-decoration: none;
-      background: var(--background-not-used);
-      border-style: solid;
-      border-width: 1px;
-      padding: 2px;   
-      margin: 1px; 
+    a {      
+      text-decoration: none;      
     }
   }
   @media (min-width: 700px) {
