--- a/src/pages/cadastrar/pedidos/styles.module.scss
+++ b/src/pages/cadastrar/pedidos/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.6fr 1fr;
   max-width: 900px;
   margin: 0 auto;
   padding: 1rem;
@@ -13,4 +13,7 @@
   display: flex;
   flex-direction: column;
   width: 60%;
+  border: solid 1px;
+  padding: 1rem;
 }
+
