--- a/src/pages/cadastrar/pedidos/styles.module.scss
+++ b/src/pages/cadastrar/pedidos/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
-  display: grid;
-  grid-template-columns: 0.6fr 1fr;
+  display: flex;
+  flex-direction: column;
   max-width: 900px;
   margin: 0 auto;
   padding: 1rem;
@@ -9,11 +9,55 @@
     border-radius: 0 15px 15px 15px;
   }
 }
+.main {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
 .div{
   display: flex;
   flex-direction: column;
-  width: 60%;
+  
+  width: 95%;
   border: solid 1px;
-  padding: 1rem;
+  padding: 0.5rem;
+  margin: 0.5rem auto;
+  border-radius: 10px;
+  border-color: #E8CDBF;
+  input {
+    width: auto;
+  }
+  
+}
+.lupa {
+  background-color: rgba(51, 51, 255, 0.61);
+  height: 25px;
+  width: 25px;
+  border: 0;
+  border-radius: 0 10px 10px 0;
 }
 
+.adicionar {
+  width: 100px;
+  margin-top: 1rem;
+  background-color: rgba(51, 51, 255, 0.61);
+  border: 0;
+  border-radius: 10px;
+  margin-left: 40%;
+   
+}
+
+@media (max-width:800px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 1rem;
+    background: var(--background-color-light);
+    @media (min-width: 800px) {
+      border-radius: 0 15px 15px 15px;
+    }
+  }
+}
