--- a/src/pages/cadastrar/pedidos/styles.module.scss
+++ b/src/pages/cadastrar/pedidos/styles.module.scss
@@ -19,10 +19,10 @@
   display: flex;
   flex-direction: column;
   
-  width: 95%;
+  width: 97%;
   border: solid 1px;
   padding: 0.5rem;
-  margin: 0.5rem auto;
+  margin: 1rem;
   border-radius: 10px;
   border-color: #E8CDBF;
   input {
@@ -60,4 +60,14 @@
       border-radius: 0 15px 15px 15px;
     }
   }
+}
+
+.lista{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 0.2fr;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 2px;
+  width: 100%; 
+  margin-bottom: 5px;
 }
