--- a/src/pages/cadastrar/pedidos/styles.module.scss
+++ b/src/pages/cadastrar/pedidos/styles.module.scss
@@ -64,7 +64,7 @@
 
 .lista{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 0.2fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.3fr;
   border-style: solid;
   border-radius: 10px;
   padding: 2px;
