--- a/src/pages/consultar/pedidos/styles.module.scss
+++ b/src/pages/consultar/pedidos/styles.module.scss
@@ -5,28 +5,7 @@
   max-width: 900px;
   margin: auto;
 }
-.lista {
-  height: 60vh;
-  scroll-behavior: smooth;
-  overflow-y: scroll;
-}
 
-.repo {
-  border-style: solid;
-  margin: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  div {
-    border-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    a {
-      text-decoration: none;
-    }
-  }
-}
 .on {
   color: green;
 }
@@ -51,6 +30,21 @@
     border-radius: 13px;
     background-color: var(--background-not-used);
     font-weight: 200;
-    margin-right: 1rem;    
+    margin-right: 1rem;
+  }
+}
+
+.listagem {
+  width: 100%;
+  th {
+    text-align: justify;
+  }
+  tr {
+    td {
+      text-align: justify;
+      a {
+        text-decoration: none;
+      }
+    }
   }
 }
