--- a/src/pages/cadastrar/pedidos/styles.module.scss
+++ b/src/pages/cadastrar/pedidos/styles.module.scss
@@ -71,3 +71,19 @@
   width: 100%; 
   margin-bottom: 5px;
 }
+
+.inputs{
+  display: flex;
+  flex-direction: column;
+  input{
+    width: 15%;
+    margin-bottom: 1rem;
+  }
+}
+
+.buttons{
+  button{
+    padding: 0.2rem;
+    margin: 2rem 3rem 0rem 0rem;
+  }
+}
